[gd_scene load_steps=39 format=3 uid="uid://dijtbnrhjr8ql"]

[ext_resource type="Script" path="res://Player/the_main_man_2.gd" id="1_o7iyu"]
[ext_resource type="Script" path="res://Player/HUD.gd" id="2_nthf7"]
[ext_resource type="PackedScene" uid="uid://js4f15rg1pbj" path="res://Player/Hands.tscn" id="2_sjwpa"]
[ext_resource type="Script" path="res://Player/WeaponManager.gd" id="3_afcpo"]
[ext_resource type="Texture2D" uid="uid://c18d5sxobmnpw" path="res://Weapons/Crosshairs_Red.svg.png" id="3_vngg3"]
[ext_resource type="Resource" uid="uid://bkvy13oqbpxk6" path="res://weaponR/Weapon Resources/Assault Rifle.tres" id="4_2puct"]
[ext_resource type="PackedScene" uid="uid://bmwxu4grq5wy" path="res://Weapons/Shorty.glb" id="4_5sfv5"]
[ext_resource type="PackedScene" uid="uid://d2ur5q3gcthp5" path="res://Weapons/Assault Rifle.glb" id="4_8y1qs"]
[ext_resource type="Resource" uid="uid://82vm0cfh4aq4" path="res://weaponR/Weapon Resources/Shorty.tres" id="5_63p71"]
[ext_resource type="Texture2D" uid="uid://mlm600mbp0r4" path="res://weaponR/muzzle_04.png" id="9_lywfw"]
[ext_resource type="AudioStream" uid="uid://3s1aa8mfqigr" path="res://weaponR/gun-shot-1-7069.mp3" id="10_8oecf"]
[ext_resource type="Texture2D" uid="uid://ln6d8k4q2yop" path="res://Weapons/smoke_07.png" id="12_8i1g0"]
[ext_resource type="Texture2D" uid="uid://c28eyhg1u02u" path="res://Weapons/smoke_08.png" id="13_jdq2t"]
[ext_resource type="AudioStream" uid="uid://b1dqljsr60fkc" path="res://Player/grunt1-68324.mp3" id="14_isx3d"]
[ext_resource type="AudioStream" uid="uid://cvtbb344748dk" path="res://Player/ammo-box-86187.mp3" id="15_wx2uf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2kalm"]
radius = 0.478712

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8ihed"]
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t75rq"]
transparency = 1
blend_mode = 1
cull_mode = 2
albedo_color = Color(0.619608, 0.254902, 0.0196078, 1)
albedo_texture = ExtResource("9_lywfw")
emission_enabled = true
emission = Color(0.937255, 0.521569, 0, 1)
emission_energy_multiplier = 3.0
grow_amount = 2.936

[sub_resource type="QuadMesh" id="QuadMesh_45tg8"]
material = SubResource("StandardMaterial3D_t75rq")
size = Vector2(0.23, 0.23)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vf23u"]
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2skd4"]
transparency = 1
albedo_texture = ExtResource("12_8i1g0")

[sub_resource type="QuadMesh" id="QuadMesh_dtfu6"]
material = SubResource("StandardMaterial3D_2skd4")
size = Vector2(0.23, 0.23)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k0kj7"]
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6bb6h"]
transparency = 1
albedo_texture = ExtResource("13_jdq2t")

[sub_resource type="QuadMesh" id="QuadMesh_etsdh"]
material = SubResource("StandardMaterial3D_6bb6h")
size = Vector2(0.4, 0.4)

[sub_resource type="Animation" id="Animation_w6r5q"]
resource_name = "AutoActivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assault Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.023, -0.305, 1.03715), Vector3(0.023, -0.305, 0.112732)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Assault Rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_61vro"]
resource_name = "AutoDeactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assault Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.023, -0.305, 0.112732), Vector3(0.023, -0.305, 1.05595)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Assault Rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_wh0iv"]
resource_name = "AutoReload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assault Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.023, -0.305, 0.188), Vector3(0.023, -0.305, 0.248), Vector3(0.023, -0.305, 0.188)]
}

[sub_resource type="Animation" id="Animation_boio2"]
resource_name = "AutoShoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assault Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.023, -0.305, 0.112732), Vector3(0.023, -0.305, 0.188), Vector3(0.023, -0.305, 0.112732)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Assault Rifle/Flash:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Assault Rifle/AutoSound:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Assault Rifle/AutoSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2.63901),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_663xd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assault Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.023, -0.305, 1.03715)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Assault Rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shorty:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.007, -0.404, 0.896502)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shorty:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shorty:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0442503, 1.57548, 0.0920832)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Assault Rifle/Flash:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Assault Rifle/AutoSound:stream")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_8oecf")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Assault Rifle/AutoSound:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Shorty/Shotsmoke:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Shorty/Smoke2:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Shorty/Shotgunsound:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5cag2"]
resource_name = "ShotActivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shorty:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.007, -0.404, 0.896502), Vector3(-0.007, -0.404, -0.0109626)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shorty:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_3fj11"]
resource_name = "ShotDeactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shorty:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.007, -0.404, -0.0109626), Vector3(-0.007, -0.404, 0.784859)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shorty:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_if1pe"]
resource_name = "ShotReload"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shorty:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.007, -0.404, -0.0109626), Vector3(-0.007, -0.404, 0.089), Vector3(-0.007, -0.404, -0.0109626)]
}

[sub_resource type="Animation" id="Animation_jkm4m"]
resource_name = "ShotShoot"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shorty:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.007, -0.404, -0.0109626), Vector3(-0.007, -0.404, 0.019), Vector3(-0.007, -0.404, -0.0109626)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shorty:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0442503, 1.57548, 0.0920832), Vector3(-0.0444156, 1.57348, 0.137017), Vector3(-0.0442503, 1.57548, 0.0920832)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shorty/Shotsmoke:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shorty/Smoke2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shorty/Shotgunsound:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3b7po"]
_data = {
"AutoActivate": SubResource("Animation_w6r5q"),
"AutoDeactivate": SubResource("Animation_61vro"),
"AutoReload": SubResource("Animation_wh0iv"),
"AutoShoot": SubResource("Animation_boio2"),
"RESET": SubResource("Animation_663xd"),
"ShotActivate": SubResource("Animation_5cag2"),
"ShotDeactivate": SubResource("Animation_3fj11"),
"ShotReload": SubResource("Animation_if1pe"),
"ShotShoot": SubResource("Animation_jkm4m")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2iy0f"]
radius = 0.7347
height = 1.77752

[sub_resource type="BoxShape3D" id="BoxShape3D_ts2mv"]
size = Vector3(1.09542, 0.665052, 1.12103)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eudxf"]
radius = 0.562367

[node name="CharacterBody3D" type="CharacterBody3D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_o7iyu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_nthf7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Current Weapon :

"

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Ammo:

"

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Weapons

"

[node name="Weapons" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Crosshair" type="TextureRect" parent="CanvasLayer"]
offset_left = 564.0
offset_top = 310.0
offset_right = 2612.0
offset_bottom = 2358.0
scale = Vector2(0.01, 0.01)
texture = ExtResource("3_vngg3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.95, 0, 0, 0, 0.95, 0, 0, 0, 0.95, 0.015, 0.911, 0)
visible = false
shape = SubResource("CapsuleShape3D_2kalm")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.088, 1.261, -0.056)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.038, 0.151, -0.061)

[node name="Player" parent="Head/Camera3D" instance=ExtResource("2_sjwpa")]
transform = Transform3D(-0.996195, 0, 0.0871559, 0, 1, 0, -0.0871559, 0, -0.996195, -0.128, -1.405, 0.115)

[node name="WeaponManager" type="Node3D" parent="Head/Camera3D"]
script = ExtResource("3_afcpo")
_weapon_resources = Array[Resource("res://weaponR/Weapon_Resource.gd")]([ExtResource("4_2puct"), ExtResource("5_63p71")])
start_weapon = Array[String](["Assault Rifle", "Shorty"])

[node name="Weapons" type="Node3D" parent="Head/Camera3D/WeaponManager"]

[node name="Assault Rifle" parent="Head/Camera3D/WeaponManager/Weapons" instance=ExtResource("4_8y1qs")]
transform = Transform3D(-0.00245265, 0, 0.229987, 0, 0.23, 0, -0.229987, 0, -0.00245265, 0.023, -0.305, 1.03715)
visible = false

[node name="Flash" type="GPUParticles3D" parent="Head/Camera3D/WeaponManager/Weapons/Assault Rifle"]
transform = Transform3D(-0.0871555, 0.996191, -4.10783e-15, -4.35449e-08, -3.80968e-09, 0.999996, 0.99619, 0.0871556, 4.37112e-08, 4.09539, 0.684, -0.00216925)
amount = 1
lifetime = 0.1
one_shot = true
process_material = SubResource("ParticleProcessMaterial_8ihed")
draw_pass_1 = SubResource("QuadMesh_45tg8")

[node name="AutoSound" type="AudioStreamPlayer3D" parent="Head/Camera3D/WeaponManager/Weapons/Assault Rifle"]
visible = false
stream = ExtResource("10_8oecf")
volume_db = -38.0
unit_size = 2.5
max_db = 1.0

[node name="Shorty" parent="Head/Camera3D/WeaponManager/Weapons" instance=ExtResource("4_5sfv5")]
transform = Transform3D(-0.000873137, -0.00436173, 0.099901, 0.00918631, 0.0994789, 0.00442358, -0.0995733, 0.00921585, -0.000467905, -0.007, -0.404, 0.896502)
visible = false

[node name="Shotsmoke" type="GPUParticles3D" parent="Head/Camera3D/WeaponManager/Weapons/Shorty"]
transform = Transform3D(0.993476, -0.0819761, -0.079261, 0.0813125, 0.0219931, 0.996445, -0.0799415, -0.996391, 0.0285154, 6.46102, 3.11193, 0.565678)
emitting = false
amount = 1
lifetime = 0.2
one_shot = true
process_material = SubResource("ParticleProcessMaterial_vf23u")
draw_pass_1 = SubResource("QuadMesh_dtfu6")

[node name="Smoke2" type="GPUParticles3D" parent="Head/Camera3D/WeaponManager/Weapons/Shorty"]
transform = Transform3D(0.993476, -0.0819761, -0.079261, 0.0813125, 0.0219931, 0.996445, -0.0799415, -0.996391, 0.0285154, 6.46102, 3.11193, 0.565678)
amount = 2
lifetime = 0.2
one_shot = true
process_material = SubResource("ParticleProcessMaterial_k0kj7")
draw_pass_1 = SubResource("QuadMesh_etsdh")

[node name="Shotgunsound" type="AudioStreamPlayer3D" parent="Head/Camera3D/WeaponManager/Weapons/Shorty"]
stream = ExtResource("10_8oecf")
volume_db = -35.0
unit_size = 3.0
max_db = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera3D/WeaponManager/Weapons"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_3b7po")
}

[node name="AutoRay" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0474789)
visible = false
target_position = Vector3(0, 0, -100)
collision_mask = 3
collide_with_areas = true

[node name="RayContainer" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0552106, -0.0488032)
visible = false

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D/RayContainer"]
target_position = Vector3(0, 0, -8)
collision_mask = 2

[node name="RayCast3D2" type="RayCast3D" parent="Head/Camera3D/RayContainer"]
target_position = Vector3(0, 0, -8)
collision_mask = 2

[node name="RayCast3D3" type="RayCast3D" parent="Head/Camera3D/RayContainer"]
target_position = Vector3(0, 0, -8)
collision_mask = 2

[node name="RayCast3D4" type="RayCast3D" parent="Head/Camera3D/RayContainer"]
target_position = Vector3(0, 0, -8)
collision_mask = 2

[node name="RayCast3D5" type="RayCast3D" parent="Head/Camera3D/RayContainer"]
target_position = Vector3(0, 0, -8)
collision_mask = 2

[node name="RayCast3D6" type="RayCast3D" parent="Head/Camera3D/RayContainer"]
target_position = Vector3(0, 0, -8)
collision_mask = 2

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.996567, -0.0827908, 0, 0.0827908, 0.996567, 0, 0, 0.348722)
light_energy = 0.7
spot_range = 62.5556
spot_attenuation = 0.133972
spot_angle = 34.0569
spot_angle_attenuation = 0.153893

[node name="SpotLight3D2" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.994676, -0.103053, 0, 0.103053, 0.994676, 0, 0, 1.49012e-08)
light_energy = 10.0
spot_range = 56.4337
spot_angle = 23.4862

[node name="HitDetect" type="Area3D" parent="."]
visible = false
collision_layer = 64
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09396, 0)
shape = SubResource("CapsuleShape3D_2iy0f")

[node name="AmmoPickUp" type="Area3D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="AmmoPickUp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.315288, -0.0753272)
shape = SubResource("BoxShape3D_ts2mv")

[node name="Hurt" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("14_isx3d")
volume_db = 0.5

[node name="Area3D" type="Area3D" parent="."]
visible = false
collision_layer = 512
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.814745, 0)
shape = SubResource("CapsuleShape3D_eudxf")

[node name="Ammo" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.996567, -0.0827908, 0, 0.0827908, 0.996567, 0.126, 1.412, 0.231722)
stream = ExtResource("15_wx2uf")
volume_db = -0.09
unit_size = 2.0
max_db = 1.0

[connection signal="Update_Ammo" from="Head/Camera3D/WeaponManager" to="CanvasLayer" method="_on_weapon_manager_update_ammo"]
[connection signal="animation_finished" from="Head/Camera3D/WeaponManager/Weapons/AnimationPlayer" to="Head/Camera3D/WeaponManager" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="HitDetect" to="." method="_on_hit_detect_body_entered"]
[connection signal="body_entered" from="AmmoPickUp" to="Head/Camera3D/WeaponManager" method="_on_ammo_pick_up_body_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
